# mmap-allocator

./: CMakeLists.txt
include/: mmap_allocator.h
src/: mmap_allocator.cpp
